# Ricochet

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  conanfile.txt  vcpkg.json
assets/packaging/: ricochet.desktop
cmake/: BuildOptions.cmake  EnableCCache.cmake  GetPlatform.cmake  SymlinkAssets.cmake  VendorImGui.cmake
scripts/: makeappimage.sh
src/: CMakeLists.txt  buildinfo.h.in  gamedata.h  gamestatebase.h  main.cpp  metadata.h.in  sdldata.h  statebase.h  statemachine.cpp  statemachine.h  texture.h  texturecache.h  transition.h
src/game/: gamedata.h  gamestatebase.h  sdldata.h  texturecache.h
src/game/states/: argsparserstate.cpp  argsparserstate.h  crashstate.cpp  crashstate.h  dummystate.cpp  dummystate.h  imguiinitstate.cpp  imguiinitstate.h  imguiquitstate.cpp  imguiquitstate.h  loginitstate.cpp  loginitstate.h  sdlinitstate.cpp  sdlinitstate.h  sdlquitstate.cpp  sdlquitstate.h
src/helpers/: imgui_block.h  log_wrappers.h  rect_extensions.h
src/statemachine/: statebase.h  statemachine.cpp  statemachine.test.cpp
src/states/: argsparserstate.cpp  argsparserstate.h  crashstate.cpp  crashstate.h  dummystate.cpp  dummystate.h  imguiinitstate.cpp  imguiinitstate.h  imguiquitstate.cpp  imguiquitstate.h  loginitstate.cpp  loginitstate.h  sdlinitstate.cpp  sdlinitstate.h  sdlquitstate.cpp  sdlquitstate.h
test/: CMakeLists.txt  gtest_test.cpp  statemachine_test.cpp
